generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

enum UserRole {
  ADMIN
  PATIENT
  PHYSIOTHERAPIST
}

enum TherapistVerificationStatus {
  PENDING
  APPROVED
  REJECTED
}

enum ConsultationStatus {
  REQUESTED
  ACCEPTED
  IN_PROGRESS
  COMPLETED
  CANCELLED
}

/// Patient-selected response SLA for paid chat sessions (Phase 3 auto-refund).
enum ConsultationSlaTier {
  STANDARD
  FAST_ONLINE
}

enum AppointmentType {
  HOME_VISIT
  CLINIC_VISIT
}

enum BookingStatus {
  PENDING
  CONFIRMED
  IN_PROGRESS
  COMPLETED
  CANCELLED
}

enum TransactionStatus {
  PENDING
  PAID
  REFUNDED
  FAILED
}

enum PaymentMethod {
  BANK_TRANSFER
  E_WALLET
  CREDIT_CARD
  QRIS
}

model User {
  /// Shared identity table for all roles (admin, patient, physiotherapist).
  id            String      @id @default(uuid())
  fullName      String
  email         String      @unique
  passwordHash  String
  phoneNumber   String?
  role          UserRole
  isActive      Boolean     @default(true)
  createdAt     DateTime    @default(now())
  updatedAt     DateTime    @updatedAt

  patientProfile        PatientProfile?
  physiotherapistProfile PhysiotherapistProfile?
  notifications         Notification[]
  sentMessages          Message[]
  conversationMembers   ConversationParticipant[]
}

model PatientProfile {
  /// Patient-specific fields separated from auth/user credentials.
  id            String   @id @default(uuid())
  userId        String   @unique
  dateOfBirth   DateTime?
  gender        String?
  address       String?
  emergencyContactName  String?
  emergencyContactPhone String?
  createdAt     DateTime @default(now())
  updatedAt     DateTime @updatedAt

  user          User      @relation(fields: [userId], references: [id], onDelete: Cascade)
  consultations Consultation[]
  bookings      Booking[]
  transactions  Transaction[]
  reviews       Review[]
}

model Category {
  id          String   @id @default(uuid())
  name        String   @unique
  description String?
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  physiotherapists PhysiotherapistProfile[]
}

model PhysiotherapistProfile {
  /// Therapist profile includes verification status managed by admin.
  id                     String   @id @default(uuid())
  userId                 String   @unique
  categoryId             String?
  bio                    String?
  education              String?
  experienceYears        Int      @default(0)
  certificationUrl       String?
  licenseNumber          String?
  consultationFee        Decimal  @db.Decimal(12, 2)
  /// In-person visit (clinic / home) fee; snapshot copied onto each Booking.
  visitFee               Decimal  @default(0) @db.Decimal(12, 2)
  clinicAddress          String?
  verificationStatus     TherapistVerificationStatus @default(PENDING)
  rejectionReason        String?
  verifiedAt             DateTime?
  /// Heartbeat presence: set by POST /physiotherapists/me/online while the
  /// therapist has the dashboard open. If `onlineUntil` is in the future,
  /// the therapist is considered "online now" for browse filters.
  onlineUntil            DateTime?
  createdAt              DateTime @default(now())
  updatedAt              DateTime @updatedAt

  user                   User @relation(fields: [userId], references: [id], onDelete: Cascade)
  category               Category? @relation(fields: [categoryId], references: [id], onDelete: SetNull)
  availabilitySlots      AvailabilitySlot[]
  consultations          Consultation[]
  bookings               Booking[]
  reviews                Review[]

  @@index([verificationStatus, onlineUntil])
}

model AvailabilitySlot {
  /// Availability blocks used when creating appointments.
  id                  String   @id @default(uuid())
  physiotherapistId   String
  slotDate            DateTime
  startTime           DateTime
  endTime             DateTime
  isAvailable         Boolean  @default(true)
  createdAt           DateTime @default(now())
  updatedAt           DateTime @updatedAt

  physiotherapist     PhysiotherapistProfile @relation(fields: [physiotherapistId], references: [id], onDelete: Cascade)
  bookings            Booking[]

  @@index([physiotherapistId, slotDate])
}

model Consultation {
  /// Paid online consultation. Lifecycle: REQUESTED (patient creates) →
  /// ACCEPTED (therapist accepts) → IN_PROGRESS (payment confirmed by admin,
  /// chat unlocked) → COMPLETED (either party closes the session). CANCELLED
  /// can happen at any stage (patient cancels before payment, or admin refunds).
  id                  String   @id @default(uuid())
  patientId           String
  physiotherapistId   String
  complaint           String
  status              ConsultationStatus @default(REQUESTED)
  /// Snapshot of physiotherapist consultationFee at creation time, so changes
  /// on the therapist profile don't retroactively affect the agreed price.
  feeSnapshot         Decimal  @db.Decimal(12, 2)
  /// How long the patient waits for the first therapist chat reply after payment
  /// before an automatic refund (cron). FAST_ONLINE requires the therapist to
  /// be heartbeat-online at consultation creation time.
  slaTier               ConsultationSlaTier @default(STANDARD)
  acceptedAt          DateTime?
  startedAt           DateTime?
  completedAt         DateTime?
  createdAt           DateTime @default(now())
  updatedAt           DateTime @updatedAt

  patient             PatientProfile @relation(fields: [patientId], references: [id], onDelete: Cascade)
  physiotherapist     PhysiotherapistProfile @relation(fields: [physiotherapistId], references: [id], onDelete: Cascade)
  conversation        Conversation?
  bookings            Booking[]
  transactions        Transaction[]

  @@index([patientId, physiotherapistId, status])
  @@index([status, startedAt])
}

model Conversation {
  /// Simple chat container tied to a consultation (optional one-to-one).
  id               String   @id @default(uuid())
  consultationId   String?  @unique
  createdAt        DateTime @default(now())
  updatedAt        DateTime @updatedAt

  consultation     Consultation? @relation(fields: [consultationId], references: [id], onDelete: SetNull)
  participants     ConversationParticipant[]
  messages         Message[]
}

model ConversationParticipant {
  id               String   @id @default(uuid())
  conversationId   String
  userId           String
  joinedAt         DateTime @default(now())

  conversation     Conversation @relation(fields: [conversationId], references: [id], onDelete: Cascade)
  user             User         @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([conversationId, userId])
  @@index([userId])
}

model Message {
  id               String   @id @default(uuid())
  conversationId   String
  senderId         String
  content          String
  createdAt        DateTime @default(now())

  conversation     Conversation @relation(fields: [conversationId], references: [id], onDelete: Cascade)
  sender           User         @relation(fields: [senderId], references: [id], onDelete: Cascade)

  @@index([conversationId, createdAt])
}

model Booking {
  /// Appointment object for home visit or clinic session.
  id                  String   @id @default(uuid())
  consultationId      String?
  patientId           String
  physiotherapistId   String
  slotId              String?
  appointmentType     AppointmentType
  appointmentDate     DateTime
  /// Therapist visitFee at booking creation (patient pays this amount).
  visitFeeSnapshot    Decimal  @db.Decimal(12, 2)
  clinicAddress       String?
  homeVisitAddress    String?
  notes               String?
  status              BookingStatus @default(PENDING)
  createdAt           DateTime @default(now())
  updatedAt           DateTime @updatedAt

  consultation        Consultation? @relation(fields: [consultationId], references: [id], onDelete: SetNull)
  patient             PatientProfile @relation(fields: [patientId], references: [id], onDelete: Cascade)
  physiotherapist     PhysiotherapistProfile @relation(fields: [physiotherapistId], references: [id], onDelete: Cascade)
  slot                AvailabilitySlot?      @relation(fields: [slotId], references: [id], onDelete: SetNull)
  transactions        Transaction[]
  reviews             Review[]

  @@index([patientId, physiotherapistId, status])
  @@index([appointmentDate])
}

model Transaction {
  /// Dummy payment transaction. Each transaction is linked to EITHER a Booking
  /// (physical visit) OR a Consultation (paid online chat) — exactly one of the
  /// two FK columns is non-null. Status flow: PENDING → PAID (admin confirm) /
  /// REFUNDED (admin refund) / FAILED.
  id               String   @id @default(uuid())
  bookingId        String?
  consultationId   String?
  patientId        String
  amount           Decimal  @db.Decimal(12, 2)
  paymentMethod    PaymentMethod
  status           TransactionStatus @default(PENDING)
  paidAt           DateTime?
  refundedAt       DateTime?
  refundReason     String?
  /// Bukti transfer: URL https (mis. drive) atau path `/uploads/payment-proofs/...` dari upload.
  paymentProofUrl  String?
  createdAt        DateTime @default(now())
  updatedAt        DateTime @updatedAt

  booking          Booking?       @relation(fields: [bookingId], references: [id], onDelete: Cascade)
  consultation     Consultation?  @relation(fields: [consultationId], references: [id], onDelete: Cascade)
  patient          PatientProfile @relation(fields: [patientId], references: [id], onDelete: Cascade)

  @@index([bookingId, status])
  @@index([consultationId, status])
}

model Review {
  /// Post-session review, with moderation controls for admin.
  id                  String   @id @default(uuid())
  bookingId           String
  patientId           String
  physiotherapistId   String
  rating              Int
  comment             String?
  isHidden            Boolean  @default(false)
  moderationNote      String?
  createdAt           DateTime @default(now())
  updatedAt           DateTime @updatedAt

  booking             Booking               @relation(fields: [bookingId], references: [id], onDelete: Cascade)
  patient             PatientProfile        @relation(fields: [patientId], references: [id], onDelete: Cascade)
  physiotherapist     PhysiotherapistProfile @relation(fields: [physiotherapistId], references: [id], onDelete: Cascade)

  @@unique([bookingId, patientId])
  @@index([physiotherapistId, rating])
}

model Notification {
  /// In-app notifications for important user events.
  id          String   @id @default(uuid())
  userId      String
  title       String
  body        String
  isRead      Boolean  @default(false)
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  user        User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId, isRead])
}
