// Physiotherapy platform — PostgreSQL schema (Prisma)
// Published canvas: https://dbdiagram.io/d/Crack-Physio-6a05b6997a923b9472b2f884
// Import at https://dbdiagram.io to edit / export PNG/PDF.
//
// SOURCE OF TRUTH: ../prisma/schema.prisma
// Last audited & aligned: 2026-05-15 (Phase A — docs/ERD sync, no migration)

Project physiotherapy_booking {
  database_type: 'PostgreSQL'
  Note: '''
    Maintenance: after any prisma/schema.prisma change, update this DBML and
    docs/02-database-schema.md, then re-import to dbdiagram if you use the canvas.

    Business rules (app layer):
    - Transaction XOR: exactly one of bookingId / consultationId is non-null.
    - Consultation chat unlock: status IN_PROGRESS only after admin marks tx PAID.
    - paymentProofUrl required before admin PATCH .../pay on PENDING transactions.
    - Consultation SLA cron may auto-refund PAID tx if therapist misses first reply.
  '''
}

// --- Enums (mirror prisma/schema.prisma) ---

Enum UserRole {
  ADMIN
  PATIENT
  PHYSIOTHERAPIST
}

Enum TherapistVerificationStatus {
  PENDING
  APPROVED
  REJECTED
}

Enum ConsultationStatus {
  REQUESTED
  ACCEPTED
  IN_PROGRESS
  COMPLETED
  CANCELLED
}

Enum ConsultationSlaTier {
  STANDARD
  FAST_ONLINE
}

Enum AppointmentType {
  HOME_VISIT
  CLINIC_VISIT
}

Enum BookingStatus {
  PENDING
  CONFIRMED
  IN_PROGRESS
  COMPLETED
  CANCELLED
}

Enum TransactionStatus {
  PENDING
  PAID
  REFUNDED
  FAILED
}

Enum PaymentMethod {
  BANK_TRANSFER
  E_WALLET
  CREDIT_CARD
  QRIS
}

// --- Tables ---

Table User {
  id uuid [pk]
  fullName varchar [not null]
  email varchar [unique, not null]
  passwordHash varchar [not null]
  phoneNumber varchar
  role UserRole [not null]
  isActive boolean [not null, default: true]
  createdAt timestamptz [not null]
  updatedAt timestamptz [not null]

  Note: 'Auth identity for ADMIN | PATIENT | PHYSIOTHERAPIST. At most one patient or physio profile per user.'
}

Table PatientProfile {
  id uuid [pk]
  userId uuid [unique, not null]
  dateOfBirth timestamptz
  gender varchar
  address varchar
  emergencyContactName varchar
  emergencyContactPhone varchar
  createdAt timestamptz [not null]
  updatedAt timestamptz [not null]

  Note: 'Domain patient id used on Consultation, Booking, Transaction, Review — not User.id.'
}

Table Category {
  id uuid [pk]
  name varchar [unique, not null]
  description varchar
  createdAt timestamptz [not null, default: `now()`]
  updatedAt timestamptz [not null]
}

Table PhysiotherapistProfile {
  id uuid [pk]
  userId uuid [unique, not null]
  categoryId uuid
  bio varchar
  education varchar
  experienceYears int [not null, default: 0]
  certificationUrl varchar
  licenseNumber varchar
  consultationFee decimal(12,2) [not null]
  visitFee decimal(12,2) [not null, default: 0]
  clinicAddress varchar
  verificationStatus TherapistVerificationStatus [not null, default: 'PENDING']
  rejectionReason varchar
  verifiedAt timestamptz
  onlineUntil timestamptz
  createdAt timestamptz [not null, default: `now()`]
  updatedAt timestamptz [not null]

  Indexes {
    (verificationStatus, onlineUntil)
  }

  Note: 'visitFee → Booking.visitFeeSnapshot; consultationFee → Consultation.feeSnapshot. onlineUntil = heartbeat browse filter + FAST_ONLINE gate.'
}

Table AvailabilitySlot {
  id uuid [pk]
  physiotherapistId uuid [not null]
  slotDate timestamptz [not null]
  startTime timestamptz [not null]
  endTime timestamptz [not null]
  isAvailable boolean [not null, default: true]
  createdAt timestamptz [not null, default: `now()`]
  updatedAt timestamptz [not null]

  Indexes {
    (physiotherapistId, slotDate)
  }
}

Table Consultation {
  id uuid [pk]
  patientId uuid [not null]
  physiotherapistId uuid [not null]
  complaint text [not null]
  status ConsultationStatus [not null, default: 'REQUESTED']
  feeSnapshot decimal(12,2) [not null]
  slaTier ConsultationSlaTier [not null, default: 'STANDARD']
  acceptedAt timestamptz
  startedAt timestamptz
  completedAt timestamptz
  createdAt timestamptz [not null, default: `now()`]
  updatedAt timestamptz [not null]

  Indexes {
    (patientId, physiotherapistId, status)
    (status, startedAt)
  }

  Note: 'Lifecycle: REQUESTED → ACCEPTED → IN_PROGRESS (after tx PAID) → COMPLETED | CANCELLED. IN_PROGRESS unlocks chat.'
}

Table Conversation {
  id uuid [pk]
  consultationId uuid [unique]
  createdAt timestamptz [not null]
  updatedAt timestamptz [not null]

  Note: 'Optional 1:1 with Consultation. consultationId unique when set.'
}

Table ConversationParticipant {
  id uuid [pk]
  conversationId uuid [not null]
  userId uuid [not null]
  joinedAt timestamptz [not null]

  Indexes {
    (conversationId, userId) [unique]
    (userId)
  }
}

Table Message {
  id uuid [pk]
  conversationId uuid [not null]
  senderId uuid [not null]
  content text [not null]
  createdAt timestamptz [not null, default: `now()`]

  Indexes {
    (conversationId, createdAt)
  }
}

Table Booking {
  id uuid [pk]
  consultationId uuid
  patientId uuid [not null]
  physiotherapistId uuid [not null]
  slotId uuid
  appointmentType AppointmentType [not null]
  appointmentDate timestamptz [not null]
  visitFeeSnapshot decimal(12,2) [not null]
  clinicAddress varchar
  homeVisitAddress varchar
  notes varchar
  status BookingStatus [not null, default: 'PENDING']
  createdAt timestamptz [not null, default: `now()`]
  updatedAt timestamptz [not null]

  Indexes {
    (patientId, physiotherapistId, status)
    (appointmentDate)
  }

  Note: 'In-person visit. visitFeeSnapshot from PhysiotherapistProfile.visitFee at create. Status: PENDING → CONFIRMED → IN_PROGRESS → COMPLETED | CANCELLED.'
}

Table Transaction {
  id uuid [pk]
  bookingId uuid
  consultationId uuid
  patientId uuid [not null]
  amount decimal(12,2) [not null]
  paymentMethod PaymentMethod [not null]
  status TransactionStatus [not null, default: 'PENDING']
  paidAt timestamptz
  refundedAt timestamptz
  refundReason varchar
  paymentProofUrl text
  createdAt timestamptz [not null, default: `now()`]
  updatedAt timestamptz [not null]

  Indexes {
    (bookingId, status)
    (consultationId, status)
  }

  Note: 'XOR: exactly one of bookingId | consultationId. paymentProofUrl required before admin confirm PAID. No CANCELLED status — use REFUNDED.'
}

Table Review {
  id uuid [pk]
  bookingId uuid [not null]
  patientId uuid [not null]
  physiotherapistId uuid [not null]
  rating int [not null]
  comment varchar
  isHidden boolean [not null, default: false]
  moderationNote varchar
  createdAt timestamptz [not null, default: `now()`]
  updatedAt timestamptz [not null]

  Indexes {
    (bookingId, patientId) [unique]
    (physiotherapistId, rating)
  }

  Note: 'One review per patient per booking. Booking should be COMPLETED before patient submits.'
}

Table Notification {
  id uuid [pk]
  userId uuid [not null]
  title varchar [not null]
  body text [not null]
  isRead boolean [not null, default: false]
  createdAt timestamptz [not null, default: `now()`]
  updatedAt timestamptz [not null]

  Indexes {
    (userId, isRead)
  }
}

// --- Relationships (onDelete mirrors Prisma) ---

Ref: User.id - PatientProfile.userId [delete: cascade]
Ref: User.id - PhysiotherapistProfile.userId [delete: cascade]
Ref: Category.id - PhysiotherapistProfile.categoryId [delete: set null]

Ref: PhysiotherapistProfile.id < AvailabilitySlot.physiotherapistId [delete: cascade]

Ref: PatientProfile.id < Consultation.patientId [delete: cascade]
Ref: PhysiotherapistProfile.id < Consultation.physiotherapistId [delete: cascade]

Ref: Consultation.id - Conversation.consultationId [delete: set null]

Ref: Conversation.id < ConversationParticipant.conversationId [delete: cascade]
Ref: User.id < ConversationParticipant.userId [delete: cascade]

Ref: Conversation.id < Message.conversationId [delete: cascade]
Ref: User.id < Message.senderId [delete: cascade]

Ref: Consultation.id < Booking.consultationId [delete: set null]
Ref: PatientProfile.id < Booking.patientId [delete: cascade]
Ref: PhysiotherapistProfile.id < Booking.physiotherapistId [delete: cascade]
Ref: AvailabilitySlot.id < Booking.slotId [delete: set null]

Ref: Booking.id < Transaction.bookingId [delete: cascade]
Ref: Consultation.id < Transaction.consultationId [delete: cascade]
Ref: PatientProfile.id < Transaction.patientId [delete: cascade]

Ref: Booking.id < Review.bookingId [delete: cascade]
Ref: PatientProfile.id < Review.patientId [delete: cascade]
Ref: PhysiotherapistProfile.id < Review.physiotherapistId [delete: cascade]

Ref: User.id < Notification.userId [delete: cascade]
